8165292: The gc+task logging is repeated a lot, decreasing the usefulness of -Xlog:gc*=info

Separate number of workers used debugging information from adaptive worker sizing log messages.

Reviewed-by: ehelin, sjohanss, jmasa